2007-06-20  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_icon_info_find,
	gnome_theme_is_writable):
	* gnome-theme-info.h: fix function signatures

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove obsolete files

2007-06-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_icon_info_free): plug leak
	* theme-thumbnail.c: (message_from_child): fix comment

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
	Stop the GdkDisplay mess and let gnome-appearance-properties handle
	gtk+ theme changes manually instead.

2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):
	make it possible to skip engine information if we're not interested
	and fix a warning

2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): add some more checks so
	we don't try to strcmp NULL strings (fixes bug #445908)

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
	Fix the appearance capplet windows not reacting to gtk+ theme changes.

2007-06-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (handle_change_signal),
	(gnome_theme_is_writable),
	(gnome_theme_info_register_theme_change):
	* gnome-theme-info.h:
	modify the theme change callback to return more useful
	information and add a function to determine whether a given
	theme is writable

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* Bonobo_Control_Capplet_generic.oaf.in:
	* wrapper-script.in: remove obsolete files

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (message_from_child),
	(generate_theme_thumbnail), (generate_theme_thumbnail_async),
	(theme_thumbnail_factory_init):
	* theme-thumbnail.h: remove caching from the thumbnailer since
	all of the current users work around it anyway, and resources
	aren't managed properly
