@@ -1,3 +1,8 @@
+2007-06-22  Denis Washington  <denisw@svn.gnome.org>
+
+	* theme-thumbnail.c: (create_image):
+	Make metatheme thumbnails original-sized and add check box + radio button.
+
 2007-06-20  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (gnome_theme_icon_info_find,
